--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.7.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
